testsuite/gsksl/errors/too-few-initializers-in-struct.glsl
struct S {
  vec2 v;
  float f;
};

void
main ()
{
  S s = { { 1, 2 } };
}
